[gd_scene load_steps=13 format=2]

[ext_resource path="res://Themes/vole_theme.tres" type="Theme" id=1]
[ext_resource path="res://Themes/fonts/OpenSans-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Themes/fonts/OpenSans-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Register.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 0.8, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.878431, 0.878431, 0.686275, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="GDScript" id=7]
script/source = "extends Panel


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 0.8, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 0.8, 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 50.0, 525.0 ],
"_edit_vertical_guides_": [ 500.0, 275.0, 725.0 ]
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 890, 257 )
color = Color( 1, 1, 0.8, 1 )

[node name="Panel" type="Panel" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -237.0
margin_top = -249.0
margin_right = 213.0
margin_bottom = 226.0
custom_styles/panel = SubResource( 1 )
script = SubResource( 7 )

[node name="UsernameInput" type="LineEdit" parent="ColorRect/Panel"]
margin_left = 12.0
margin_top = 106.0
margin_right = 212.0
margin_bottom = 139.0

[node name="EmailInput" type="LineEdit" parent="ColorRect/Panel"]
margin_left = 237.0
margin_top = 104.0
margin_right = 437.0
margin_bottom = 137.0

[node name="FirstNameInput" type="LineEdit" parent="ColorRect/Panel"]
margin_left = 12.0
margin_top = 195.0
margin_right = 212.0
margin_bottom = 228.0

[node name="LastNameInput" type="LineEdit" parent="ColorRect/Panel"]
margin_left = 237.0
margin_top = 192.0
margin_right = 437.0
margin_bottom = 225.0

[node name="PasswordInput" type="LineEdit" parent="ColorRect/Panel"]
margin_left = 12.0
margin_top = 286.0
margin_right = 212.0
margin_bottom = 319.0
rect_pivot_offset = Vector2( -278, -70 )
secret = true

[node name="PasswordConfirmInput" type="LineEdit" parent="ColorRect/Panel"]
margin_left = 237.0
margin_top = 287.0
margin_right = 437.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( -278, -70 )
secret = true

[node name="RegisterLabel" type="Label" parent="ColorRect/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.5
margin_top = -223.5
margin_right = 95.5
margin_bottom = -192.5
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 1.01408, 1 )
rect_pivot_offset = Vector2( 113, 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Register account"
align = 1

[node name="UsernameLabel" type="Label" parent="ColorRect/Panel"]
margin_left = 12.0
margin_top = 81.0
margin_right = 212.0
margin_bottom = 104.0
text = "Username"

[node name="FirstNameLabel" type="Label" parent="ColorRect/Panel"]
margin_left = 12.0
margin_top = 170.0
margin_right = 212.0
margin_bottom = 193.0
text = "First Name"

[node name="SignUpBtn" type="Button" parent="ColorRect/Panel"]
margin_left = 115.0
margin_top = 415.0
margin_right = 335.0
margin_bottom = 455.0
mouse_default_cursor_shape = 2
text = "Sign Up"
icon_align = 1

[node name="EmailLabel" type="Label" parent="ColorRect/Panel"]
margin_left = 237.0
margin_top = 79.0
margin_right = 437.0
margin_bottom = 102.0
text = "Email"

[node name="PasswordLabel" type="Label" parent="ColorRect/Panel"]
margin_left = 12.0
margin_top = 261.0
margin_right = 212.0
margin_bottom = 284.0
rect_pivot_offset = Vector2( -278, -45 )
text = "Password"

[node name="LastNameLabel" type="Label" parent="ColorRect/Panel"]
margin_left = 237.0
margin_top = 167.0
margin_right = 437.0
margin_bottom = 190.0
text = "Last Name"

[node name="OptionButton" type="OptionButton" parent="ColorRect/Panel"]
margin_left = 103.0
margin_top = 355.0
margin_right = 345.0
margin_bottom = 388.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Please pick your occupation"

[node name="PasswordConfirmLabel" type="Label" parent="ColorRect/Panel"]
margin_left = 237.0
margin_top = 262.0
margin_right = 437.0
margin_bottom = 285.0
rect_pivot_offset = Vector2( -278, -45 )
text = "Re-enter Password"

[node name="HaveAnAccBtn" type="Button" parent="ColorRect"]
margin_left = 366.0
margin_top = 539.0
margin_right = 633.0
margin_bottom = 567.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.203922, 0.203922, 0.203922, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
text = "Already have an account? Sign in here"

[node name="AppTitle" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -487.0
margin_top = -275.0
margin_right = -296.0
margin_bottom = -244.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 113, 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "VOLE SIMULATOR"
align = 1

[node name="ErrorLabel" type="Label" parent="ColorRect"]
margin_left = 725.0
margin_top = 168.0
margin_right = 925.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( -219, 8 )
custom_fonts/font = SubResource( 8 )

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="ColorRect/Panel/SignUpBtn" to="." method="_on_SignUpBtn_pressed"]
[connection signal="item_selected" from="ColorRect/Panel/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="ColorRect/HaveAnAccBtn" to="." method="_on_HaveAnAccBtn_pressed"]
